--- a/flask_server/static/css/period-display.css
+++ b/flask_server/static/css/period-display.css
@@ -100,6 +100,7 @@ main.table {
     border-radius: 30px;
     box-shadow: 0 .4rem .8rem #0005;
     overflow: hidden;
+    margin-bottom: 100px;
 }
 
 .table-header {
@@ -202,6 +203,25 @@ tbody tr:hover {
     background: #252525;
 }
 
+#removeButton {
+    display: none;
+    top: 50%;
+    -ms-transform: translateY(18%);
+    transform: translateY(18%);
+}
+
+#removeButton button {
+    border: none;
+    background-color: transparent;
+    color: #b33d3d;
+}
+
+#removeButton button:active {
+    border: none;
+    background-color: transparent;
+    color: #cacaca;
+}
+
 .create-buttons {
     display: flex;
     justify-content: flex-end;
@@ -227,8 +247,17 @@ tbody tr:hover {
     padding-right: 5px;
 }
 
+.create-buttons button {
+    border: none;
+    background-color: transparent;
+}
+
 .new-class-button-wrapper {
     padding: 5px 10px;
+}
+
+#editModeBtn {
+    display: "inline-block"
 }
 
 .create-buttons .edit-classes-button {
@@ -242,7 +271,48 @@ tbody tr:hover {
     box-shadow: 0 .4rem .8rem #0005;
 }
 
+.create-buttons .edit-classes-button:hover {
+    background: #cacaca;
+    color: #8685ef;
+    width: 180px;
+    height: 100%;
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 24px;
+    box-shadow: 0 .4rem .8rem #0005;
+}
+
 .edit-classes-button-wrapper {
+    padding: 5px 10px;
+}
+
+#saveBtn {
+    display: none;
+}
+
+.create-buttons .save-classes-button {
+    background: #8685ef;
+    color: #cacaca;
+    width: 180px;
+    height: 100%;
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 24px;
+    box-shadow: 0 .4rem .8rem #0005;
+}
+
+.create-buttons .save-classes-button:hover {
+    background: #cacaca;
+    color: #8685ef;
+    width: 180px;
+    height: 100%;
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 24px;
+    box-shadow: 0 .4rem .8rem #0005;
+}
+
+.save-classes-button-wrapper {
     padding: 5px 10px;
 }
 
