--- a/flask_server/templates/base.html
+++ b/flask_server/templates/base.html
@@ -16,15 +16,27 @@
             margin-left: 50px;
             text-decoration: none;
         }
+
+        .alert {
+            padding: 20px;
+            margin: 5px;
+            color: #970020;
+            background-color: #ffd5de;
+        }
     </style>
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('index') }}">FlaskApp</a>
+        <a href="{{ url_for('editStudent') }}">FlaskApp</a>
+        <a href="{{ url_for('create') }}">Create</a>
         <a href="#">About</a>
     </nav>
     <hr>
     <div class="content">
+        {% for message in get_flashed_messages() %}
+            <div class="alert">{{ message }}</div>
+        {% endfor %}
+        
         {% block content %} {% endblock %}
     </div>
 </body>
